# exercises

./: LICENSE  README.md
exercise_1_variables/: Cargo.toml
exercise_1_variables/src/: main.rs
exercise_2_primitive_types/: Cargo.toml
exercise_2_primitive_types/src/: main.rs
exercise_3_functions/src/: a_add_numbers.rs  b_sumvec.rs  d_calculate.rs  main.rs
exercise_3_strings/: Cargo.toml
exercise_3_strings/src/: main.rs
exercise_4_functions/: Cargo.toml
exercise_4_functions/src/: main.rs  part_1_add_numbers.rs  part_2_sumvec.rs  part_3_divide.rs  part_4_calculate.rs
exercise_4_strings/: Cargo.toml
exercise_4_strings/src/: main.rs
exercise_5_can_it_go_smaller/: Cargo.toml
exercise_5_can_it_go_smaller/src/: main.rs
exercise_6_library/: Cargo.toml
exercise_6_library/src/: main.rs
